--- a/dxw-rubocop.yml
+++ b/dxw-rubocop.yml
@@ -36,6 +36,9 @@ Style/Documentation:
 Style/FormatStringToken:
     Enabled: false
 
+Style/StringLiterals:
+  Enabled: false
+
 Layout/EmptyLineAfterGuardClause:
     Enabled: false
 
